org.mmisw.ont - Ontology URI resolver 
Carlos Rueda - MMI / MBARI

ChangeLog

2008-10-17
	- main.css: normal font (instead of x-small)
	- minor logging changes
	
	
2008-10-16
	- Preliminaries for resolving terms
	
	- Process xslt for output of sparql query (with xslt parameter)
	- Inline stylesheet with xslti parameter, but not working yet (in firefox at least)
	 

2008-10-15
	- OntGraph: load all ontologies into memory
	- Added sparql support: .../ont?sparql=CONSTRUCT  { ?s ?p ?o } where{?s ?p ?o. } LIMIT 20
	  TODO testing
	- Internal request to reload ontologies: .../ont?_reload
	  TODO (perhaps): set up quantum (cronjob) to do the reload 
	  
	- Db.getOntologies: Fixed link to obtaing ontologies:
	  The correct link between the two tables is:
	    v_ncbo_ontology.id  ==  ncbo_ontology_file.ontology_version_id
	
	
2008-10-13
	- added "list" parameter: shows the list of ontologies as a convenience for
	  testing the existing entries in the database.
	  
	  Note that all these convenience parameters shouldn't be visible for the
	  general user.
	  
	- added logging mechanism.
	  
	
2008-10-12
	- Initial version 0.1.0
	- NOTE: <version> component not yet handled.
	
	Note: mysql driver not included in the project nor in the generated war.
	Instead, this application assumes the driver to be available in the container.
	(I saved it under <apache-tomcat-home>/lib/ on mmi).