@@ -3,6 +3,10 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2008-10-18
+	- General code clean-up (loggers, non "static" classes)
+	- New OntConfig to handle configuration parameters; removed hard-coded params.
+	
 2008-10-17
 	- main.css: normal font (instead of x-small)
 	- minor logging changes
